--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   text-align: center;
 }
 
+#root .App .dark{
+  background-color: darkgrey;
+}
+#root .App .light{
+  background-color: white;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
